[gd_scene load_steps=54 format=2]

[ext_resource path="res://People/AxeMan.png" type="Texture" id=1]
[ext_resource path="res://Scripts/AxeMan.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.26796
height = 2.3397

[sub_resource type="Animation" id=2]
resource_name = "attack_left"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 9 ), Vector2( 1, 9 ), Vector2( 2, 9 ), Vector2( 3, 9 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hit_tree"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack_right"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 8 ), Vector2( 1, 8 ), Vector2( 2, 8 ), Vector2( 3, 8 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hit_tree"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "build_left "
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 11 ), Vector2( 1, 11 ), Vector2( 2, 11 ), Vector2( 3, 11 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "build_hit"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "build_right"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 10 ), Vector2( 1, 10 ), Vector2( 2, 10 ), Vector2( 3, 10 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "build_hit"
} ]
}

[sub_resource type="Animation" id=6]
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 3 ), Vector2( 1, 3 ) ]
}

[sub_resource type="Animation" id=7]
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 2 ), Vector2( 1, 2 ) ]
}

[sub_resource type="Animation" id=8]
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "idle_right"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "run_behind"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 7 ), Vector2( 1, 7 ), Vector2( 2, 7 ), Vector2( 3, 7 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "run_forward"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 6 ), Vector2( 1, 6 ), Vector2( 2, 6 ), Vector2( 3, 6 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "run_left"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 5 ), Vector2( 1, 5 ), Vector2( 2, 5 ), Vector2( 3, 5 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "run_right"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 4 ), Vector2( 1, 4 ), Vector2( 2, 4 ), Vector2( 3, 4 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 7 ), Vector2( 1, 7 ), Vector2( 2, 7 ), Vector2( 3, 7 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 6 ), Vector2( 1, 6 ), Vector2( 2, 6 ), Vector2( 3, 6 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 5 ), Vector2( 1, 5 ), Vector2( 2, 5 ), Vector2( 3, 5 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "walk_right"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 4 ), Vector2( 1, 4 ), Vector2( 2, 4 ), Vector2( 3, 4 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "attack_right"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "attack_left"

[sub_resource type="AnimationNodeBlendSpace2D" id=20]
blend_point_0/node = SubResource( 18 )
blend_point_0/pos = Vector2( 1, 0 )
blend_point_1/node = SubResource( 19 )
blend_point_1/pos = Vector2( -1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "build_left "

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "build_right"

[sub_resource type="AnimationNodeBlendSpace2D" id=23]
blend_point_0/node = SubResource( 21 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 22 )
blend_point_1/pos = Vector2( 1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "idle_forward"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "idle_behind"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "idle_right"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "idle_left"

[sub_resource type="AnimationNodeBlendSpace2D" id=28]
blend_point_0/node = SubResource( 24 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 25 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 26 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 27 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "run_right"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "run_left"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "run_forward"

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "run_behind"

[sub_resource type="AnimationNodeBlendSpace2D" id=33]
blend_point_0/node = SubResource( 29 )
blend_point_0/pos = Vector2( 1, 0 )
blend_point_1/node = SubResource( 30 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 31 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 32 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "walk_forward"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "walk_behind"

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "walk_right"

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "walk_left"

[sub_resource type="AnimationNodeBlendSpace2D" id=38]
blend_point_0/node = SubResource( 34 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 35 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 36 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 37 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]

[sub_resource type="AnimationNodeStateMachineTransition" id=44]

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachineTransition" id=46]

[sub_resource type="AnimationNodeStateMachine" id=47]
states/Attack/node = SubResource( 20 )
states/Attack/position = Vector2( 191, 12 )
states/Build/node = SubResource( 23 )
states/Build/position = Vector2( 38, 86 )
states/Idle/node = SubResource( 28 )
states/Idle/position = Vector2( 191, 87 )
states/Run/node = SubResource( 33 )
states/Run/position = Vector2( 495, 87 )
states/Walk/node = SubResource( 38 )
states/Walk/position = Vector2( 341, 86 )
transitions = [ "Idle", "Walk", SubResource( 39 ), "Walk", "Idle", SubResource( 40 ), "Idle", "Attack", SubResource( 41 ), "Attack", "Idle", SubResource( 42 ), "Idle", "Build", SubResource( 43 ), "Build", "Idle", SubResource( 44 ), "Walk", "Run", SubResource( 45 ), "Run", "Walk", SubResource( 46 ) ]
start_node = "Idle"
graph_offset = Vector2( -158, -72 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=48]

[sub_resource type="CircleShape2D" id=49]
radius = 10.6247

[sub_resource type="CircleShape2D" id=50]
radius = 47.8999

[sub_resource type="CircleShape2D" id=51]
radius = 12.0

[node name="AxeMan" type="KinematicBody2D" groups=[
"Axe_man",
"Npc",
]]
collision_layer = 17
collision_mask = 17
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -13 )
texture = ExtResource( 1 )
vframes = 18
hframes = 4
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.150685, -0.0562285 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack_left = SubResource( 2 )
anims/attack_right = SubResource( 3 )
"anims/build_left " = SubResource( 4 )
anims/build_right = SubResource( 5 )
anims/idle_behind = SubResource( 6 )
anims/idle_forward = SubResource( 7 )
anims/idle_left = SubResource( 8 )
anims/idle_right = SubResource( 9 )
anims/run_behind = SubResource( 10 )
anims/run_forward = SubResource( 11 )
anims/run_left = SubResource( 12 )
anims/run_right = SubResource( 13 )
anims/walk_behind = SubResource( 14 )
anims/walk_forward = SubResource( 15 )
anims/walk_left = SubResource( 16 )
anims/walk_right = SubResource( 17 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 47 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 48 )
parameters/Attack/blend_position = Vector2( 0.460554, 0.340206 )
parameters/Build/blend_position = Vector2( 0.330873, 0.134021 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Run/blend_position = Vector2( 0, 0 )
parameters/Walk/blend_position = Vector2( 0, 0 )

[node name="HitBox" type="Area2D" parent="."]
visible = false
position = Vector2( 0.662167, -12.3163 )
monitoring = false
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 49 )

[node name="View" type="Area2D" parent="."]
position = Vector2( 0.662167, -12.3163 )
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="View"]
shape = SubResource( 50 )

[node name="InteractArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
shape = SubResource( 51 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="InPlayer" type="Timer" parent="."]
one_shot = true

[node name="Wood" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="body_entered" from="View" to="." method="_on_View_body_entered"]
[connection signal="body_entered" from="InteractArea" to="." method="_on_InteractArea_body_entered"]
[connection signal="body_exited" from="InteractArea" to="." method="_on_InteractArea_body_exited"]
[connection signal="timeout" from="InPlayer" to="." method="_on_InPlayer_timeout"]
